--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,4 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@BhavyaMuni 
-github
-/
-gitignore
-3.1k
-103k54.2k
- Code
- Pull requests 136 Actions
- Projects 0
- Security 0
- Insights
-gitignore/Python.gitignore
-@pradyunsg pradyunsg Remove pip-wheel-metadata/ from Python.gitignore (#3364)
-14f8a8b on Apr 12
-@arcresu@shiftkey@Lucretiel@Harrison-G@jwg4@GabrielC101@misaelnieto@pmsosa@svkampen@vltr@thedrow@matheussl@hugovk@ghisvail@EvandroLG@DSIW@amigcamel@toanant@2Cubed@brettcannon@weinihou@Visgean@nvie@skuschel@sigo@sethmlarson
-138 lines (112 sloc)  1.99 KB
-  
+.DS_Store
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
